# CSC340Asmt04

./: CMakeLists.txt  README.md
PartA_LinkedBag340/: CMakeLists.txt  LinkedBag340.cpp
PartB_Experiments/: CMakeLists.txt  main.cpp
PartC_SmartPointers/: CMakeLists.txt  LinkedBag.cpp  LinkedBag.h  LinkedBag340.cpp  Node.cpp  Node.h
PartD_IamCreative/: CMakeLists.txt  LinkedBag.h  LinkedBag340.cpp  PartD.cpp
part_a/: CMakeLists.txt  Include.h  LinkedBag340.cpp
part_b/: CMakeLists.txt  main.cpp
part_c/: CMakeLists.txt  LinkedBag340.cpp
