cmake_minimum_required(VERSION 3.21)
project(CSC340Asmt04)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(${PROJECT_SOURCE_DIR}/PartA_LinkedBag340)
add_subdirectory(${PROJECT_SOURCE_DIR}/PartB_Experiments)
add_subdirectory(${PROJECT_SOURCE_DIR}/PartC_SmartPointers)
add_subdirectory(${PROJECT_SOURCE_DIR}/PartD_IamCreative)